--- a/Day_1.ipynb
+++ b/Day_1.ipynb
@@ -1,14 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Day 1 problem statements"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Problem Statement 1: (Keep the relevant data) \n",
     "import pandas as pd\n",
-    "census_data = pd.read_csv(\"census_2011.csv\")\n",
+    "census_data = pd.read_csv(\"Data/census_2011.csv\")\n",
     "# Select only the required columns\n",
     "required_columns = [\n",
     "    'State name', 'District name', 'Population', 'Male', 'Female',\n",
@@ -21,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\achin\\AppData\\Local\\Temp\\ipykernel_5148\\1187339766.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\achin\\AppData\\Local\\Temp\\ipykernel_24236\\1187339766.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -191,7 +198,7 @@
        "4    147408.0         304979.0     109818.0         61334.0           704.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\achin\\AppData\\Local\\Temp\\ipykernel_5148\\552038016.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\achin\\AppData\\Local\\Temp\\ipykernel_24236\\552038016.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -386,7 +393,7 @@
        "4    147408.0         304979.0     109818.0         61334.0           704.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -558,19 +565,28 @@
        "4    147408.0         304979.0     109818.0         61334.0           704.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Problem Statement 4: (New State/UT formation)\n",
-    "telangana_districts = pd.read_csv(\"Telangana.txt\", header=None)[0].tolist()\n",
+    "telangana_districts = pd.read_csv(\"Data/Telangana.txt\", header=None)[0].tolist()\n",
     "ladakh_districts = ['Leh', 'Kargil']\n",
     "\n",
     "cleaned_data.loc[cleaned_data['District'].isin(telangana_districts), 'State/UT'] = 'Telangana'\n",
     "cleaned_data.loc[cleaned_data['District'].isin(ladakh_districts), 'State/UT'] = 'Laddakh'\n",
     "cleaned_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_data.to_csv('Clean Data/cleaned_data1.csv')"
    ]
   }
  ],
